# monitoring-worker

./: .env  .env.example  .gcloudignore  .replit  DB_CLIENT_USAGE.md  Dockerfile  LICENSE  LOGGING_GUIDE.md  MODULE-INTEGRATION-DOCUMENTATION.md  OPENROUTER_SETUP.md  README.md  cloudbuild.yaml  dbClient.js  docker-compose.yml  index.js  package-lock.json  package.json  pyproject.toml  render.yaml  replit.md  server.js
config/: aiPrompts.json  networks.json  patterns.json  thresholds.json  tongyi-config.json  weights.json
deploy/: site-monitoring-api.service  site-monitoring-beat.service  site-monitoring-worker.service
deployment/: README.md  setup-vm.sh  site-monitoring.service
docs/: ml-training-reference.md
examples/: directory-crawl-example.js
migrations/: 20251220_add_audit_job_queue_id.sql  add_mfa_detection_columns.sql  add_visible_ads_percentage.sql  fix_visibility_compliance_schema.sql
modules/: ad-analyzer.js  ai-helper.js  cdp-audit-orchestrator.js  content-analyzer.js  content-filter.js  crawler.js  data-quality-calculator.js  data-quality-db.js  database-orchestrator.js  directory-audit-orchestrator.js  directory-detector.js  env-config.js  extraction-tracker.js  filter-chain.js  freshness-scorer.js  gam-fetcher.js  gam-metrics-analyzer.js  layout-analyzer.js  log-queue-manager.js  logger.js  metrics.js  mfa-scorer.js  policy-compliance-checker.js  queue-manager.js  robots-parser.js  seo-analyzer.js  supabase-client-browser.js  supabase-client.js  table-extractor.js  technical-checker.js  ua-generator.js
scripts/: cleanup-stale-audits.js  run-migration.js  scheduler.js  setup-gce.sh  test-cdp-crawler.js  verify-schema.js  view-logs.sh  webhook-handler.js  worker-runner.js  worker.service
src/: __init__.py  config.py  (+2 more)
(+120 files in other folders)
