[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "site-monitoring-worker"
version = "1.0.0"
description = "MFA Detection Site Monitoring Worker - Python Edition"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "MFA Team"}
]

dependencies = [
    # Core Framework
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Crawler (crawl4ai)
    "crawl4ai>=0.7.0",
    "playwright>=1.49.0",
    
    # Database
    "supabase>=2.0.0",
    "httpx>=0.27.0",
    "httpx[http2]>=0.27.0",
    
    # Content Analysis
    "textstat>=0.7.3",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    
    # AI/LLM
    "groq>=0.4.0",
    "huggingface-hub>=0.20.0",
    
    # Utilities
    "structlog>=24.1.0",
    "fake-useragent>=2.0.0",
    "cloudscraper>=1.2.71",
    "numpy>=1.26.0",
    "dnspython>=2.4.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=24.1.0",
    "certifi>=2024.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "flower>=2.0.0",
]

[project.scripts]
worker = "src.workers.main:main"
api = "src.main:run_server"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
